--- a/resoucese/css/style.css
+++ b/resoucese/css/style.css
@@ -118,6 +118,7 @@ visibility: hidden;
   /* margin-top: 20px; */
   background-color: white;
 margin: auto;
+visibility: hidden;
 }
 .button-parent{
   /* margin-left:50%; */
